...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/background_dark"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="DISCONNECT"
        app:layout_constraintEnd_toEndOf="@+id/wispView"
        app:layout_constraintStart_toStartOf="@+id/wispView"
...
        android:text="Port"
        app:layout_constraintEnd_toStartOf="@+id/btnReturn"
        app:layout_constraintStart_toEndOf="@+id/textAddr"
        app:layout_constraintTop_toTopOf="@+id/btnReturn" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Toggle"
        app:layout_constraintEnd_toEndOf="@+id/btnReturn"
        app:layout_constraintHorizontal_bias="0.627"
...
